apply from: "$project.rootDir/gradle/scripts/test-aggregator.gradle"

allprojects {
    repositories {
        mavenCentral()
    }
}

subprojects {
    apply plugin: "java"
    apply plugin: "java-library"
    apply plugin: "checkstyle"

    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17

    ext {
        HIBERNATE_VERSION = "5.6.10.Final"
        JUNIT_JUPITER_VERSION = "5.8.2"
        JJWT_VERSION = "0.11.5"
        ASSERTJ_VERSION = "3.22.0"
    }

    group = projectGroups
    version = applicationVersion

    dependencies {
        implementation "org.slf4j:slf4j-api:1.7.32"
    }

    tasks.getByName("jar") {
        enabled = true
    }

    tasks.named("test") {
        useJUnitPlatform()
    }

    checkstyle {
        configFile = file("${project.rootDir}/config/checkstyle/checkstyle.xml")
        configProperties = ["suppressionFile": "${project.rootDir}/config/checkstyle/checkstyle/checkstyle-suppressions.xml"]
        toolVersion = "8.40"
        ignoreFailures = false
        maxErrors = 0
        maxWarnings = 0
    }
}